core/src/main/java/com/example/core/error/NewConversationException.java
package com.example.core.error;

public class NewConversationException extends Exception{

    public NewConversationException(String msg) {
        super(msg);
    }
}
